Bug 301779 - Leave a Note applet shows a visual glitch when resized too small
Summary: Leave a Note applet shows a visual glitch when resized too small
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-misc (other bugs)
Version First Reported In: 4.8.80 (beta1)
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks: plasmoid-resizing
  Show dependency treegraph
 
Reported: 2012-06-12 21:03 UTC by Maarten De Meyer
Modified: 2012-06-13 21:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maarten De Meyer 2012-06-12 21:03:25 UTC
The Leave a Note applet can be scaled down until the button and text are no longer on the background. The background is minimized but the overlay remains.

Reproducible: Always

Steps to Reproduce:
1.Place the Leave a Note applet on the desktop
2.Scale it down
Actual Results:  
It is not actually minimized, the text moves out of the border

Expected Results:  
The applet should have a sane minimum size.
Comment 1 Anne-Marie Mahfouf 2012-06-13 14:35:19 UTC
Git commit 6291c729921c1b6fced4a1ded781c3630757b95a by Anne-Marie Mahfouf.
Committed on 13/06/2012 at 16:31.
Pushed by annma into branch 'master'.

choose sane minimum size for the desktop so the applet is still drawn
nicely
FIXED-IN: 4.9

M  +1    -1    applets/leavenote/leavenote.cpp

http://commits.kde.org/kdeplasma-addons/6291c729921c1b6fced4a1ded781c3630757b95a