choose sane minimum size for the desktop so the applet is still drawn nicely

BUG: 301779
FIXED-IN: 4.9