applets/leavenote/leavenote.cpp
@@ -135,7 +135,7 @@ void LeaveNote::constraintsEvent(Plasma::Constraints constraints)
             mLayout->setOrientation(Qt::Vertical);
         }
         if (formFactor() == Plasma::Planar) {
-            setMinimumSize(10,10);
+            setMinimumSize(90, 120);
             setMaximumSize(QWIDGETSIZE_MAX, QWIDGETSIZE_MAX);
             resize(340, 250);
             emit appletTransformedItself();
